--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 .inner {
   width: 140rem;
   margin: 0 auto;
-  background: rgba(255, 255, 0, 0.3);
+  /* background: rgba(255, 255, 0, 0.3); */
 }
 
 .inner-wide {
@@ -19,7 +19,7 @@
 
 #header nav {
   height: 9.5rem;
-  background: #5f5;
+  /* background: #5f5; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -40,7 +40,7 @@
 
 .gnb > li > a {
   display: block;
-  border: 1px solid #000;
+  /* border: 1px solid #000; */
   padding: 1rem 2.5rem;
   font-weight: 600;
   color: #fff;
@@ -61,7 +61,7 @@
 
 .submenu li a {
   display: block;
-  border: 1px solid pink;
+  /* border: 1px solid pink; */
   padding: 10px;
   text-align: center;
   background: #333;
@@ -75,30 +75,47 @@
 .btn-lang {
   width: 5.5rem;
   height: 2.5rem;
-  background: #000;
-  background: url(../img/ico1.svg) no-repeat 0 0;
+  /* background: #000; */
+  background: url(../img/ico1.svg) no-repeat 0 0 / contain;
 }
 .btn-menu {
   width: 2.5rem;
   height: 2.5rem;
-  background: red;
-  background: url(../img/ico2.svg) no-repeat 0 0;
+  /* background: red; */
+  background: url(../img/ico2.svg) no-repeat 0 0 / contain;
 }
 
 .visual {
   height: 108rem;
-  background: skyblue;
+  /* background: skyblue; */
   position: relative;
+  overflow: hidden;
 }
 
 .video {
-  height: 100%;
-  border: 10px solid #000;
+  width: 1920px;
+  height: 1080px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
 
+  transform: translate(-50%, -50%) scale(1.3);
+}
+
+.video::after {
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
+
+  background: rgba(0, 0, 0, 0.7);
+}
+
+.video iframe {
   width: 100%;
+  height: 100%;
 }
 
 .visual .inner {
@@ -111,7 +128,21 @@
   top: 50%;
   left: 0;
   transform: translateY(-50%);
-  background: #55f;
+  /* background: #55f; */
+
+  width: 100%;
+}
+
+.visual-con::after {
+  content: '';
+  display: block;
+  width: 80.7143%; /* 1130 / 1400 * 100 */
+  height: 1px;
+  background: #fff;
+
+  position: absolute;
+  bottom: 12px;
+  right: 0;
 }
 
 .visual-con h2 {
@@ -126,10 +157,26 @@
   font-weight: 600;
   font-size: 1.8rem;
   color: #fff;
+
+  position: absolute;
+  bottom: 1.5rem;
+  right: 0;
+
+  display: flex;
+  gap: 1.5rem;
+  align-items: center;
+}
+
+.visual-con a::after {
+  content: '';
+  display: block;
+  width: 1.2rem;
+  height: 1.2rem;
+  background: url(../img/ico-arr-w.svg) no-repeat 50% / cover;
 }
 
 .sec-title {
-  background: khaki;
+  /* background: khaki; */
   font-weight: 700;
   color: var(--title-color);
 }
@@ -138,7 +185,7 @@
   display: flex;
   align-items: flex-end;
   gap: 0.9rem;
-  background: #5f5;
+  /* background: #5f5; */
 }
 
 .sec-title h3::after {
@@ -164,10 +211,33 @@
   margin-top: 7rem;
 }
 .business-list li {
-  border: 1px solid #000;
+  /* border: 1px solid #000; */
   height: 37rem;
-
   flex: 1 1 20%;
+  background: no-repeat 0 0 / cover;
+  transition: 0.3s;
+  /* detail info를 위한 설정  */
+  position: relative;
+  overflow: hidden;
+}
+.business-list li:nth-child(1) {
+  background-image: url(../img/business-pic1.png);
+}
+.business-list li:nth-child(2) {
+  background-image: url(../img/business-pic2.png);
+}
+.business-list li:nth-child(3) {
+  background-image: url(../img/business-pic3.png);
+}
+.business-list li:nth-child(4) {
+  background-image: url(../img/business-pic4.png);
+}
+.business-list li:nth-child(5) {
+  background-image: url(../img/business-pic5.png);
+}
+
+.business-list li:hover {
+  flex: 1 1 40%;
 }
 
 .business-list li a {
@@ -175,13 +245,58 @@
   flex-direction: column;
   justify-content: flex-end; /* 글씨를 바다에 붙이기 */
   align-items: center;
-  border: 1px solid #f00;
+  /* border: 1px solid #f00; */
   width: 100%;
   height: 100%;
   padding: 2.7rem;
   font-weight: 600;
   font-size: 2.6rem;
   color: #fff;
+}
+.business-list li::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /* background: rgba(0, 0, 0, 0.5); */
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.business-list li:hover::before {
+  opacity: 1;
+}
+
+.detail-info {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  padding: 2.7rem;
+
+  bottom: -50px;
+  opacity: 0;
+}
+.detail-info dt {
+  font-weight: 600;
+}
+.detail-info dd {
+  font-weight: 200;
+  font-size: 1.5rem;
+  margin-top: 1.8rem;
+}
+
+.business-list li:hover .detail-info {
+  bottom: 0;
+  opacity: 1;
+  transition: 0.3s 0.4s;
+}
+
+.business-list li:hover span {
+  opacity: 0;
 }
 
 .pr {
@@ -227,7 +342,7 @@
 }
 
 .heritage-con {
-  background: #5f5;
+  /* background: #5f5; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -302,7 +417,7 @@
 .family-site ::after {
   content: '';
   display: block;
-  background: #f00;
+  /* background: #f00; */
   width: 1.2rem;
   height: 1.2rem;
 }
@@ -317,21 +432,14 @@
 }
 
 .foot-links {
-  border: 1px solid #f00;
+  /* border: 1px solid #f00; */
   display: flex;
   justify-content: space-between;
-}
-
-.foot-menu {
-  background: #5f5;
 }
 
 .foot-menu ul {
   display: flex;
   gap: 14rem;
-}
-.foot-menu ul li {
-  border: 1px solid #ff0;
 }
 
 .foot-menu ul li dl dt {
@@ -350,7 +458,7 @@
   margin-top: 3.6rem;
 }
 .foot-family {
-  background: #55f;
+  /* background: #55f; */
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -375,7 +483,7 @@
   display: block;
   width: 3.6rem;
   height: 3.6rem;
-  background: #f00 no-repeat 50%;
+  background: no-repeat 50%;
 }
 .sns-list > a {
   background-image: url(../img/ico-insta.png);
@@ -388,9 +496,6 @@
     width: 924px;
     width: 90.2344%;
   }
-
-  .foot-menu ul {
-  }
 }
 
 /* 태블릿 디자인 */
@@ -399,6 +504,10 @@
     width: 924px;
     width: 90.2344%;
   } */
+
+  .visual-con::after {
+    width: 70.7922%;
+  }
 
   .business-list li a {
     font-size: 1.8rem;
@@ -624,5 +733,15 @@
 @media (max-width: 500px) {
   :root {
     font-size: 62.5%;
+  }
+
+  .visual-con::after {
+    width: 62%;
+  }
+
+  .visual-con a {
+    bottom: -30px;
+    left: 0;
+    right: auto;
   }
 }
