--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   width: 140rem;
   margin: 0 auto;
   /* background: rgba(255, 255, 0, 0.3); */
+  position: relative;
 }
 
 .inner-wide {
@@ -17,6 +18,22 @@
   z-index: 10;
 }
 
+#header::after {
+  content: '';
+  background: rgb(0, 132, 255);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 400px;
+  position: absolute;
+}
+
+#header nav > * {
+  z-index: 1;
+}
+
 #header nav {
   height: 9.5rem;
   /* background: #5f5; */
@@ -24,6 +41,43 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.submenu-wrap {
+  position: absolute;
+  top: 13.5rem;
+  left: 15rem;
+  z-index: 1;
+}
+.submenu-wrap ul {
+  display: flex;
+  gap: 6rem;
+}
+
+.submenu-wrap ul li dl dt {
+  font-weight: 600;
+  font-size: 2.2rem;
+  color: rgb(11, 86, 117);
+}
+.submenu-wrap ul li dl dd {
+  font-size: 1.8rem;
+  line-height: 1.78;
+  color: #666;
+}
+
+.submenu-wrap ul li dl dt + dd {
+  margin-top: 2.4rem;
+}
+
+.banner-slid {
+  position: absolute;
+  top: 13.5rem;
+  right: 15rem;
+  background: #5f5;
+  z-index: 1;
+  width: 41.3rem;
+  height: 20.5em;
+}
+
 .logo {
   display: block;
   width: 17rem;
@@ -311,10 +365,39 @@
 }
 
 .pr-list li {
-  border: 1px solid #000;
+  /* border: 1px solid #000; */
   height: 50.2rem;
   flex: 1 1 30%;
   padding: 1.7rem;
+
+  background: no-repeat 0 0 / cover;
+  position: relative;
+}
+
+.pr-list li:nth-child(1) {
+  background-image: url(../img/pr-pic1.png);
+}
+.pr-list li:nth-child(2) {
+  background-image: url(../img/pr-pic2.png);
+}
+.pr-list li:nth-child(3) {
+  background-image: url(../img/pr-pic3.png);
+}
+
+.pr-list li::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.pr-list li:hover::before {
+  opacity: 1;
 }
 
 .pr-list li a {
@@ -325,6 +408,7 @@
   font-weight: 700;
   font-size: 2.6rem;
   color: #fff;
+  position: relative;
 }
 
 .management {
