--- a/css/style.css
+++ b/css/style.css
@@ -11,16 +11,32 @@
   width: 160rem;
 }
 #header {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 10;
 }
 
+#header::before {
+  content: '';
+  position: absolute;
+  top: 9.5rem;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: #b3b3b3;
+  z-index: 1;
+  opacity: 0;
+  transition: 0.3s;
+}
+#header.active::before {
+  opacity: 1;
+}
+
 #header::after {
   content: '';
-  background: rgb(0, 132, 255);
+  background: #fff;
   top: 0;
   left: 0;
   right: 0;
@@ -28,6 +44,25 @@
   width: 100%;
   height: 400px;
   position: absolute;
+
+  transform: translateY(-100%);
+  transition: 0.3s;
+}
+
+#header.active::after {
+  transform: translateY(0%);
+}
+
+#header.active .logo a {
+  background-image: url(../img/logo_blue_01.png);
+}
+
+#header.active .gnb li a {
+  color: #000;
+}
+
+#header.active .btn-menu {
+  background-image: url(../img/ico-menu-b.svg);
 }
 
 #header nav > * {
@@ -42,12 +77,23 @@
   align-items: center;
 }
 
+.logo a {
+  display: block;
+  width: 17rem;
+  height: 2.4rem;
+  background: url(../img/logo.svg) no-repeat 0 0;
+  z-index: 10;
+}
+
 .submenu-wrap {
   position: absolute;
   top: 13.5rem;
   left: 15rem;
   z-index: 1;
+
+  display: none;
 }
+
 .submenu-wrap ul {
   display: flex;
   gap: 6rem;
@@ -56,7 +102,12 @@
 .submenu-wrap ul li dl dt {
   font-weight: 600;
   font-size: 2.2rem;
-  color: rgb(11, 86, 117);
+  color: var(--title-color);
+}
+.submenu-wrap ul li.on dl dt {
+  font-weight: 600;
+  font-size: 2.2rem;
+  color: var(--main-color);
 }
 .submenu-wrap ul li dl dd {
   font-size: 1.8rem;
@@ -68,6 +119,29 @@
   margin-top: 2.4rem;
 }
 
+.submenu-wrap ul li dl dd a {
+  display: flex;
+  align-items: center;
+  /* border: 1px solid #000; */
+}
+
+.submenu-wrap ul li dl dd a::before {
+  content: '';
+  display: block;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background: var(--main-color);
+  transform: translateX(0px);
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.submenu-wrap ul li dl dd a:hover::before {
+  transform: translateX(-16px);
+  opacity: 1;
+}
+
 .banner-slid {
   position: absolute;
   top: 13.5rem;
@@ -75,15 +149,9 @@
   background: #5f5;
   z-index: 1;
   width: 41.3rem;
-  height: 20.5em;
-}
+  height: 10.5em;
 
-.logo {
-  display: block;
-  width: 17rem;
-  height: 2.4rem;
-  background: url(../img/logo.svg) no-repeat 0 0;
-  z-index: 10;
+  display: none;
 }
 .gnb {
   display: flex;
@@ -92,12 +160,37 @@
   z-index: 10;
 }
 
-.gnb > li > a {
+.gnb li a {
   display: block;
   /* border: 1px solid #000; */
-  padding: 1rem 2.5rem;
+  padding: 0 2.5rem;
   font-weight: 600;
   color: #fff;
+  height: 9.5rem;
+}
+
+.gnb li a b {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  /* border: 1px solid yellow; */
+  position: relative;
+}
+
+.gnb li a b::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0%;
+  height: 3px;
+  transition: 0.3s;
+  background: var(--main-color);
+  /* background: var(--main-color); */
+}
+.gnb li.on a b::after {
+  width: 100%;
 }
 
 .gnb > li {
