모바일 용 메뉴 기본 동작 구현

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,8 @@
   left: 0;
   width: 100%;
   z-index: 10;
+
+  transition: 0.3s;
 }
 
 #header::before {
@@ -67,6 +69,7 @@
 #header.active .gnb li a {
   color: #000;
 }
+#header.w-bg .btn-m-menu,
 #header.w-bg .btn-menu,
 #header.active .btn-menu {
   background-image: url(../img/ico-menu-b.svg);
@@ -88,7 +91,7 @@
   display: block;
   width: 17rem;
   height: 2.4rem;
-  background: url(../img/logo.svg) no-repeat 0 0;
+  background: url(../img/logo.svg) no-repeat 0 0 / contain;
   z-index: 10;
 }
 
@@ -237,6 +240,42 @@
   height: 2.5rem;
   /* background: red; */
   background: url(../img/ico2.svg) no-repeat 0 0 / contain;
+}
+
+.btn-m-menu {
+  width: 2.5rem;
+  height: 2.5rem;
+  /* background: red; */
+  background: url(../img/ico2.svg) no-repeat 0 0 / contain;
+  display: none;
+}
+
+/* 모바일 용 전체메뉴 */
+.dim {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 99;
+  display: none;
+}
+.m-submenu-wrap {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 90%;
+  height: 100vh;
+  background: #fff;
+  z-index: 100;
+  padding: 5vw;
+  transform: translateX(100%);
+  transition: 0.3s;
+}
+
+.m-submenu-wrap.active {
+  transform: translateX(0%);
 }
 
 .visual {
@@ -748,6 +787,13 @@
     display: none;
   }
 
+  .btn-menu {
+    display: none;
+  }
+  .btn-m-menu {
+    display: block;
+  }
+
   .business-list {
     flex-wrap: wrap;
   }
@@ -810,12 +856,13 @@
   }
 
   .btn-lang {
-    width: 3.7rem;
+    width: 1.7rem;
     height: 1.7rem;
   }
 
+  .btn-m-menu,
   .btn-menu {
-    width: 3.7rem;
+    width: 1.7rem;
     height: 1.7rem;
   }
 
