--- a/css/common.css
+++ b/css/common.css
@@ -1,8 +1,9 @@
 @charset 'utf-8';
-@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css');
+
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css');
 
 :root {
-  font-size: 62.5%;
+  font-size: 62.5%; /* 10px */
   --main-color: #0b56a7;
   --title-color: #111;
   --text-color: #333;
@@ -16,6 +17,7 @@ a:hover {
   text-decoration: none;
   color: var(--main-color);
 }
+
 hr,
 .hidden {
   position: absolute;
@@ -25,6 +27,7 @@ hr,
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
 }
+
 body {
   font: 2rem 'Pretendard', sans-serif;
 }
