--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,16 @@
   /* background: rgba(255, 255, 0, 0.3); */
   position: relative;
 }
-
 .inner-wide {
   width: 160rem;
 }
+
 #header {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 10;
-
   transition: 0.3s;
 }
 
@@ -32,6 +31,7 @@
   opacity: 0;
   transition: 0.3s;
 }
+
 #header.active::before {
   opacity: 1;
 }
@@ -39,14 +39,11 @@
 #header::after {
   content: '';
   background: #fff;
+  position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
   width: 100%;
   height: 400px;
-  position: absolute;
-
   transform: translateY(-100%);
   transition: 0.3s;
 }
@@ -58,17 +55,28 @@
 #header.w-bg {
   background: rgba(255, 255, 255, 0.8);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(15px);
+  backdrop-filter: blur(5px);
 }
 
 #header.w-bg .logo a,
 #header.active .logo a {
   background-image: url(../img/logo_blue_01.png);
 }
+
 #header.w-bg .gnb li a,
 #header.active .gnb li a {
   color: #000;
 }
+#header.w-bg .btn-lang,
+#header.active .btn-lang {
+  background-image: url(../img/btn_language_black_01.png);
+}
+
+#header.w-bg .btn-lang::after,
+#header.active .btn-lang::after {
+  border-top-color: #000;
+}
+
 #header.w-bg .btn-m-menu,
 #header.w-bg .btn-menu,
 #header.active .btn-menu {
@@ -79,31 +87,15 @@
   z-index: 1;
 }
 
-#header nav {
-  height: 9.5rem;
-  /* background: #5f5; */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.logo a {
-  display: block;
-  width: 17rem;
-  height: 2.4rem;
-  background: url(../img/logo.svg) no-repeat 0 0 / contain;
-  z-index: 10;
-}
-
 .submenu-wrap {
   position: absolute;
   top: 13.5rem;
   left: 15rem;
+  /* background: #5f5; */
   z-index: 1;
 
   display: none;
 }
-
 .submenu-wrap ul {
   display: flex;
   gap: 6rem;
@@ -114,17 +106,16 @@
   font-size: 2.2rem;
   color: var(--title-color);
 }
+
 .submenu-wrap ul li.on dl dt {
-  font-weight: 600;
-  font-size: 2.2rem;
   color: var(--main-color);
 }
+
 .submenu-wrap ul li dl dd {
   font-size: 1.8rem;
   line-height: 1.78;
   color: #666;
 }
-
 .submenu-wrap ul li dl dt + dd {
   margin-top: 2.4rem;
 }
@@ -138,38 +129,49 @@
 .submenu-wrap ul li dl dd a::before {
   content: '';
   display: block;
-  width: 7px;
-  height: 7px;
+  width: 6px;
+  height: 6px;
   border-radius: 50%;
   background: var(--main-color);
   transform: translateX(0px);
   opacity: 0;
   transition: 0.3s;
 }
-
 .submenu-wrap ul li dl dd a:hover::before {
-  transform: translateX(-16px);
   opacity: 1;
+  transform: translateX(-16px); /* trftx */
 }
 
-.banner-slid {
+.banner-slide {
   position: absolute;
   top: 13.5rem;
   right: 15rem;
   background: #5f5;
   z-index: 1;
   width: 41.3rem;
-  height: 10.5em;
+  height: 20.5rem;
 
   display: none;
 }
+
+#header nav {
+  height: 9.5rem;
+  /* background: #5f5; */
+  display: flex;
+  /* justify-content: space-between; */
+  align-items: center;
+}
+.logo a {
+  display: block;
+  width: 17rem;
+  height: 2.4rem;
+  background: url(../img/logo.svg) no-repeat 0 0 / contain;
+}
 .gnb {
   display: flex;
-  margin-right: auto;
+  margin-right: auto; /* mra */
   margin-left: 6.5rem;
-  z-index: 10;
 }
-
 .gnb li a {
   display: block;
   /* border: 1px solid #000; */
@@ -183,10 +185,9 @@
   display: flex;
   align-items: center;
   height: 100%;
-  /* border: 1px solid yellow; */
+  /* border: 1px solid #ff0; */
   position: relative;
 }
-
 .gnb li a b::after {
   content: '';
   position: absolute;
@@ -197,56 +198,77 @@
   height: 3px;
   transition: 0.3s;
   background: var(--main-color);
-  /* background: var(--main-color); */
 }
+
 .gnb li.on a b::after {
   width: 100%;
 }
 
-.gnb > li {
+.util {
+  display: flex;
+  gap: 1rem;
   position: relative;
 }
 
-.submenu {
-  position: absolute;
-  top: 40px;
-  left: 0;
-  width: 100%;
+.btn-lang {
+  width: 4.4rem;
+  height: 2.5rem;
+  background: url(../img/btn_language_white_01.png) no-repeat 0 0 / contain;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
 
+.btn-lang::after {
+  content: '';
+  display: block;
+  /* width: 4px;
+  height: 4px;
+  background: yellow; */
+
+  /* 삼각형 그리기 */
+  border: 4px solid transparent;
+  border-top-color: #fff;
+}
+
+.lang-select {
+  position: absolute;
+  top: 36px;
+  left: 4px;
+  background: #fff;
+  padding: 10px;
+  height: 3.6rem;
   display: none;
 }
 
-.submenu li a {
-  display: block;
-  /* border: 1px solid pink; */
-  padding: 10px;
-  text-align: center;
-  background: #333;
-  color: #fff;
+.lang-select::after {
+  content: '';
+  position: absolute;
+  top: -8px;
+  left: 50%;
+  transform: translateX(-50%);
+  border: 4px solid transparent;
+  border-bottom-color: #fff;
 }
 
-.util {
-  display: flex;
+.lang-select a {
+  font-weight: 700;
+  font-size: 1.2rem;
+  color: var(--title-color);
+  text-decoration: underline; /* tdu */
+  line-height: 1.2rem;
 }
 
-.btn-lang {
-  width: 5.5rem;
-  height: 2.5rem;
-  /* background: #000; */
-  background: url(../img/ico1.svg) no-repeat 0 0 / contain;
-}
 .btn-menu {
   width: 2.5rem;
   height: 2.5rem;
-  /* background: red; */
-  background: url(../img/ico2.svg) no-repeat 0 0 / contain;
+  background: url(../img/ico-menu.svg) no-repeat 0 0 / contain;
 }
 
 .btn-m-menu {
   width: 2.5rem;
   height: 2.5rem;
-  /* background: red; */
-  background: url(../img/ico2.svg) no-repeat 0 0 / contain;
+  background: url(../img/ico-menu.svg) no-repeat 0 0 / contain;
   display: none;
 }
 
@@ -269,40 +291,79 @@
   height: 100vh;
   background: #fff;
   z-index: 100;
-  padding: 5vw;
+  padding: 30px 11.29%;
   transform: translateX(100%);
   transition: 0.3s;
 }
-
 .m-submenu-wrap.active {
   transform: translateX(0%);
 }
+.m-gnb {
+  background: #ff5;
+}
+.m-gnb > li {
+  border: 1px solid #000;
+  padding: 1.5rem 0;
+}
+.m-gnb > li > strong {
+  display: block;
+  font-weight: 700;
+  font-size: 2.1rem;
+  color: var(--title-color);
+  padding: 1rem 0;
+  transition: 0.4s;
+  background: tomato;
 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.m-gnb > li.on > strong {
+  background: skyblue;
+}
+.m-gnb > li > strong::after {
+  content: '';
+  display: block;
+  width: 1rem;
+  height: 1rem;
+  border: solid #000;
+  border-width: 2px 2px 0 0;
+  transform: rotate(135deg);
+  transition: 0.3s;
+}
+
+.m-gnb > li.on > strong::after {
+  transform: rotate(315deg);
+}
+
+.m-gnb-sub {
+  margin-left: 4rem;
+  display: none;
+}
+.m-gnb-sub li a {
+  font-size: 1.8rem;
+  line-height: 1.5;
+}
 .visual {
   height: 108rem;
   /* background: skyblue; */
   position: relative;
   overflow: hidden;
 }
-
 .video {
   width: 1920px;
   height: 1080px;
   position: absolute;
   top: 50%;
   left: 50%;
-
   transform: translate(-50%, -50%) scale(1.3);
 }
-
 .video::after {
-  content: '';
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-
   background: rgba(0, 0, 0, 0.7);
 }
 
@@ -321,21 +382,8 @@
   top: 50%;
   left: 0;
   transform: translateY(-50%);
-  /* background: #55f; */
-
   width: 100%;
-}
-
-.visual-con::after {
-  content: '';
-  display: block;
-  width: 80.7143%; /* 1130 / 1400 * 100 */
-  height: 1px;
-  background: #fff;
-
-  position: absolute;
-  bottom: 12px;
-  right: 0;
+  /* background: #55f; */
 }
 
 .visual-con h2 {
@@ -346,13 +394,30 @@
   letter-spacing: -0.25px;
 }
 
+.visual-con h2 b {
+  /* border: 1px solid #ff0; */
+  position: relative;
+}
+
+.visual-con h2 b::after {
+  content: '';
+  display: block;
+  width: 1870%;
+  height: 1px;
+  background: #fff;
+
+  position: absolute;
+  bottom: 12px;
+  left: 16px;
+}
+
 .visual-con a {
   font-weight: 600;
   font-size: 1.8rem;
   color: #fff;
 
   position: absolute;
-  bottom: 1.5rem;
+  bottom: 2rem;
   right: 0;
 
   display: flex;
@@ -376,11 +441,10 @@
 .sec-title h3 {
   font-size: 2.4rem;
   display: flex;
-  align-items: flex-end;
   gap: 0.9rem;
+  align-items: flex-end; /* aife */
   /* background: #5f5; */
 }
-
 .sec-title h3::after {
   content: '';
   display: block;
@@ -390,6 +454,7 @@
   margin-bottom: 0.5rem;
 }
 .sec-title p {
+  /* fz4.8r+lh1.4+mt4.5r */
   font-size: 4.8rem;
   line-height: 1.4;
   margin-top: 4.5rem;
@@ -406,10 +471,14 @@
 .business-list li {
   /* border: 1px solid #000; */
   height: 37rem;
+
+  /* fx1-1-20p */
   flex: 1 1 20%;
-  background: no-repeat 0 0 / cover;
   transition: 0.3s;
-  /* detail info를 위한 설정  */
+
+  background: no-repeat 0 0 / cover;
+
+  /* detail info를 위한 설정 */
   position: relative;
   overflow: hidden;
 }
@@ -429,14 +498,36 @@
   background-image: url(../img/business-pic5.png);
 }
 
+.business-list li::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /* background: rgba(255, 0, 0, 0.5); */
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+
+  opacity: 0;
+  transition: 0.3s;
+}
+
+/* hover */
 .business-list li:hover {
   flex: 1 1 40%;
+}
+.business-list li:not(:hover) {
+  flex: 1 1 15%;
+}
+.business-list li:hover::before {
+  opacity: 1;
 }
 
 .business-list li a {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end; /* 글씨를 바다에 붙이기 */
+  justify-content: flex-end;
   align-items: center;
   /* border: 1px solid #f00; */
   width: 100%;
@@ -446,25 +537,9 @@
   font-size: 2.6rem;
   color: #fff;
 }
-.business-list li::before {
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  /* background: rgba(0, 0, 0, 0.5); */
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
-  opacity: 0;
-  transition: 0.3s;
-}
-
-.business-list li:hover::before {
-  opacity: 1;
-}
 
 .detail-info {
+  /* background: tomato; */
   position: absolute;
   left: 0;
   width: 100%;
@@ -473,21 +548,23 @@
   bottom: -50px;
   opacity: 0;
 }
+
 .detail-info dt {
   font-weight: 600;
 }
+
 .detail-info dd {
   font-weight: 200;
   font-size: 1.5rem;
   margin-top: 1.8rem;
 }
 
+/* hover 효과 */
 .business-list li:hover .detail-info {
   bottom: 0;
   opacity: 1;
   transition: 0.3s 0.4s;
 }
-
 .business-list li:hover span {
   opacity: 0;
 }
@@ -499,15 +576,12 @@
 .pr-list {
   display: flex;
   gap: 2rem;
-
   margin-top: 7rem;
 }
-
 .pr-list li {
   /* border: 1px solid #000; */
   height: 50.2rem;
   flex: 1 1 30%;
-  padding: 1.7rem;
 
   background: no-repeat 0 0 / cover;
   position: relative;
@@ -541,12 +615,13 @@
 
 .pr-list li a {
   display: block;
+  padding: 2.7rem;
   width: 100%;
   height: 100%;
-
   font-weight: 700;
   font-size: 2.6rem;
   color: #fff;
+
   position: relative;
 }
 
@@ -566,12 +641,13 @@
 
 .heritage-con {
   /* background: #5f5; */
+
   display: flex;
-  flex-direction: column;
+  flex-direction: column; /* fxdc */
   align-items: center;
+
   text-align: center;
 }
-
 .heritage-con h4 {
   font-weight: 900;
   font-size: 7.2rem;
@@ -588,14 +664,15 @@
   font-size: 2.4rem;
 }
 .heritage-con a {
-  display: flex;
-  gap: 1.2rem;
   font-weight: 600;
   font-size: 1.8rem;
   color: var(--title-color);
   margin-top: 8.2rem;
 
-  align-self: flex-end; /* asfe : 교차축 방향을 아이템 개별 배치 */
+  align-self: flex-end; /* asfe : 교차축 방향으로 아이템을 개별 배치 */
+
+  display: flex;
+  gap: 1.2rem;
   align-items: center;
 }
 
@@ -604,54 +681,14 @@
   display: block;
   width: 1.2rem;
   height: 1.2rem;
-  background: url(../img/ico3.svg) no-repeat 50%;
+  background: url(../img/ico-arr.svg) no-repeat 50%;
 }
 
 #footer {
   padding: 11.6rem 0 13.3rem;
-  background: url(https://www.hwaseunggroup.com/kor/assets/img/common/footer_bg_.png)
+  background: #000
+    url(https://www.hwaseunggroup.com/kor/assets/img/common/footer_bg_.png)
     no-repeat 0 0 / cover fixed;
-}
-
-.family-site {
-  border: 1px solid #fff;
-  width: 28.6rem;
-  height: 5rem;
-
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.family-site select {
-  background: transparent;
-  color: #fff;
-  appearance: none;
-  padding: 0 1.5rem;
-
-  flex: 1 1 auto;
-}
-
-.family-site select option {
-  background: #333;
-  color: #fff;
-}
-
-.family-site ::after {
-  content: '';
-  display: block;
-  /* background: #f00; */
-  width: 1.2rem;
-  height: 1.2rem;
-}
-.foot-copyright {
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  margin-top: 7rem;
-  padding-top: 3.2rem;
-  text-align: center;
-  font-weight: 200;
-  font-size: 1.4rem;
-  color: #fff;
 }
 
 .foot-links {
@@ -670,6 +707,7 @@
   font-size: 2.2rem;
   color: #fff;
 }
+
 .foot-menu ul li dl dd {
   font-weight: 200;
   font-size: 1.8rem;
@@ -680,6 +718,7 @@
 .foot-menu ul li dl dd:first-of-type {
   margin-top: 3.6rem;
 }
+
 .foot-family {
   /* background: #55f; */
   display: flex;
@@ -687,12 +726,55 @@
   align-items: flex-end;
 }
 
+.family-site {
+  border: 1px solid #fff;
+  width: 28.6rem;
+  height: 5rem;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.family-site select {
+  background: transparent;
+  color: #fff;
+  appearance: none;
+  padding: 0 1.5rem;
+  flex: 1 1 auto;
+}
+
+.family-site select option {
+  background: #333;
+}
+
+.family-site::after {
+  content: '';
+  display: block;
+  /* background: #f00; */
+  width: 1.2rem;
+  height: 1.2rem;
+}
+
+.foot-copyright {
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  /* mt7r+pt3.2r+tac+fw200+fz1.4r+c#fff */
+  margin-top: 7rem;
+  padding-top: 3.2rem;
+  text-align: center;
+  font-weight: 200;
+  font-size: 1.4rem;
+  color: #fff;
+}
+
 .policy-list {
+  /* mt3r+df+g2r */
   margin-top: 3rem;
   display: flex;
   gap: 2rem;
 }
 .policy-list li a {
+  /* fw500+fz1.6r+c#fff */
   font-weight: 500;
   font-size: 1.6rem;
   color: #fff;
@@ -701,59 +783,58 @@
 .sns-list {
   margin-top: 12.6rem;
 }
-
 .sns-list > a {
   display: block;
   width: 3.6rem;
   height: 3.6rem;
   background: no-repeat 50%;
 }
-.sns-list > a {
-  background-image: url(../img/ico-insta.png);
+.sns-list > a.instagram {
+  background-image: url(../img/ico-instagram.svg);
 }
 
 /* inner크기와 같은 분기점 생성 */
 @media (max-width: 1600px) {
   .inner,
   .inner-wide {
-    width: 924px;
+    /* width: 924px; */
     width: 90.2344%;
+  }
+
+  .foot-menu ul {
+    gap: 7rem;
   }
 }
 
 /* 태블릿 디자인 */
 @media (max-width: 1024px) {
-  /* .inner .inner-wide {
+  /* .inner,
+  .inner-wide {
     width: 924px;
     width: 90.2344%;
   } */
 
   .visual-con::after {
-    width: 70.7922%;
+    width: 70.7792%; /* (654 / 924) * 100 */
   }
 
   .business-list li a {
     font-size: 1.8rem;
   }
-
   .pr-list li {
     height: 33.2rem;
   }
-
   .heritage-con {
     width: 71.4rem;
     width: 77.2727%;
     margin: 0 auto;
   }
-
   .heritage-con strong {
     font-size: 3.2rem;
   }
-
   .heritage-con p {
     font-size: 2.2rem;
   }
-
   .foot-links {
     width: 82.4rem;
     width: 89.1775%;
@@ -776,13 +857,18 @@
     height: 3rem;
     font-size: 1.4rem;
   }
+
+  .policy-list li a {
+    font-size: 1.4rem;
+  }
 }
 
-/* 문제가 발생하는 해상도를 위한 분기 */
+/*  문제가 발생하는 해상도를 위한 분기 */
 @media (max-width: 1000px) {
   #header nav {
     justify-content: space-between;
   }
+
   .gnb {
     display: none;
   }
@@ -797,7 +883,6 @@
   .business-list {
     flex-wrap: wrap;
   }
-
   .business-list li {
     flex: 1 1 30%;
   }
@@ -811,22 +896,16 @@
   .foot-family {
     align-items: center;
   }
-
   .family-site {
     margin-top: 4rem;
   }
-
   .sns-list {
-    order: -1; /* od : 쌓이는 순서 달라지게 하고 싶을 때*/
+    order: -1; /* od */
     margin-top: 0;
   }
 
   .policy-list {
     margin-top: 2.2rem;
-  }
-
-  .policy-list li a {
-    font-size: 1.4rem;
   }
 
   .foot-copyright {
@@ -835,7 +914,6 @@
 }
 
 /* 모바일 디자인 */
-
 @media (max-width: 700px) {
   :root {
     font-size: 90%;
@@ -856,7 +934,7 @@
   }
 
   .btn-lang {
-    width: 1.7rem;
+    width: 3.7rem;
     height: 1.7rem;
   }
 
@@ -873,7 +951,6 @@
   .visual-con h2 {
     font-size: 3rem;
   }
-
   .visual-con a {
     font-size: 1.3rem;
   }
@@ -885,7 +962,6 @@
   .sec-title h3 {
     font-size: 1.2rem;
   }
-
   .sec-title p {
     font-size: 2.2rem;
   }
@@ -895,7 +971,7 @@
     height: 21rem;
   }
 
-  .business-list li {
+  .business-list li a {
     font-size: 1.5rem;
   }
 
@@ -903,12 +979,10 @@
     flex-wrap: wrap;
     gap: 1.2rem;
   }
-
   .pr-list li {
-    flex: 1 1 45%;
+    flex: 1 1 48%;
     height: 19.2rem;
   }
-
   .pr-list li a {
     font-size: 1.4rem;
   }
@@ -929,13 +1003,14 @@
   .heritage-con a {
     /* background: #55f; */
     font-size: 1.3rem;
-    width: 28.4em;
+    width: 28.4rem;
     width: 81.1429%;
+
     height: 3.8rem;
     border: 1px solid #000;
     border-radius: 50px;
     justify-content: center;
-    align-self: center;
+    align-self: center; /* asc */
     align-self: initial;
     /* align-self: unset; */
   }
@@ -943,17 +1018,15 @@
   #footer {
     padding: 6.3rem 0 8rem;
   }
-
   .foot-menu {
     display: none;
   }
-
   .foot-links {
     width: 19.4rem;
     width: 55.4286%;
+
     display: block;
   }
-
   .family-site {
     width: 100%;
     height: 3.5rem;
@@ -965,11 +1038,9 @@
   :root {
     font-size: 62.5%;
   }
-
   .visual-con::after {
     width: 62%;
   }
-
   .visual-con a {
     bottom: -30px;
     left: 0;
