--- a/css/style.css
+++ b/css/style.css
@@ -67,14 +67,14 @@
 #header.active .gnb li a {
   color: #000;
 }
+
 #header.w-bg .btn-lang,
 #header.active .btn-lang {
   background-image: url(../img/btn_language_black_01.png);
 }
-
 #header.w-bg .btn-lang::after,
 #header.active .btn-lang::after {
-  border-top-color: #000;
+  border-top-color: #000; /* bdtc */
 }
 
 #header.w-bg .btn-m-menu,
@@ -215,16 +215,15 @@
   height: 2.5rem;
   background: url(../img/btn_language_white_01.png) no-repeat 0 0 / contain;
   display: flex;
-  align-items: center;
   justify-content: flex-end;
+  align-items: center;
 }
-
 .btn-lang::after {
   content: '';
   display: block;
   /* width: 4px;
   height: 4px;
-  background: yellow; */
+  background: #ff0; */
 
   /* 삼각형 그리기 */
   border: 4px solid transparent;
@@ -240,7 +239,6 @@
   height: 3.6rem;
   display: none;
 }
-
 .lang-select::after {
   content: '';
   position: absolute;
@@ -256,7 +254,6 @@
   font-size: 1.2rem;
   color: var(--title-color);
   text-decoration: underline; /* tdu */
-  line-height: 1.2rem;
 }
 
 .btn-menu {
@@ -298,6 +295,7 @@
 .m-submenu-wrap.active {
   transform: translateX(0%);
 }
+
 .m-gnb {
   background: #ff5;
 }
@@ -318,20 +316,22 @@
   justify-content: space-between;
   align-items: center;
 }
+
 .m-gnb > li.on > strong {
   background: skyblue;
 }
+
 .m-gnb > li > strong::after {
   content: '';
   display: block;
-  width: 1rem;
-  height: 1rem;
+  width: 1.2rem;
+  height: 1.2rem;
   border: solid #000;
+  /* bdw1-1-0-0 */
   border-width: 2px 2px 0 0;
   transform: rotate(135deg);
   transition: 0.3s;
 }
-
 .m-gnb > li.on > strong::after {
   transform: rotate(315deg);
 }
@@ -344,6 +344,7 @@
   font-size: 1.8rem;
   line-height: 1.5;
 }
+
 .visual {
   height: 108rem;
   /* background: skyblue; */
@@ -359,12 +360,13 @@
   transform: translate(-50%, -50%) scale(1.3);
 }
 .video::after {
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .video iframe {
@@ -517,9 +519,7 @@
 .business-list li:hover {
   flex: 1 1 40%;
 }
-.business-list li:not(:hover) {
-  flex: 1 1 15%;
-}
+
 .business-list li:hover::before {
   opacity: 1;
 }
@@ -686,9 +686,7 @@
 
 #footer {
   padding: 11.6rem 0 13.3rem;
-  background: #000
-    url(https://www.hwaseunggroup.com/kor/assets/img/common/footer_bg_.png)
-    no-repeat 0 0 / cover fixed;
+  background: #000 url(https://www.hwaseunggroup.com/kor/assets/img/common/footer_bg_.png) no-repeat 0 0 / cover fixed;
 }
 
 .foot-links {
@@ -801,8 +799,30 @@
     width: 90.2344%;
   }
 
+  .submenu-wrap {
+    left: 4%;
+  }
+  .banner-slide {
+    right: 4%;
+  }
+
   .foot-menu ul {
     gap: 7rem;
+  }
+}
+
+@media (max-width: 1300px) {
+  .submenu-wrap {
+    left: 3%;
+  }
+  .banner-slide {
+    right: 3%;
+  }
+  .submenu-wrap ul li dl dt {
+    font-size: 1.8rem;
+  }
+  .submenu-wrap ul li dl dd {
+    font-size: 1.6rem;
   }
 }
 
@@ -864,7 +884,7 @@
 }
 
 /*  문제가 발생하는 해상도를 위한 분기 */
-@media (max-width: 1000px) {
+@media (max-width: 1200px) {
   #header nav {
     justify-content: space-between;
   }
@@ -951,6 +971,14 @@
   .visual-con h2 {
     font-size: 3rem;
   }
+  .visual-con h2 b {
+    position: initial;
+  }
+  .visual-con h2 b::after {
+    left: 0;
+    bottom: -7px;
+  }
+
   .visual-con a {
     font-size: 1.3rem;
   }
